refactor eth
